Adds additional button styles

--- a/foodZen/client/styles/style.css
+++ b/foodZen/client/styles/style.css
@@ -174,11 +174,13 @@ td:hover {
 
 li.basket-item {
   padding-top: 35px;
-  background-color: #C4D2FF;
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 15px;
   box-shadow: 20px, 20px, 20px, 20px, #888888;
-
+  background-color: #3498DB;
+  border-bottom: 5px solid #2980B9;
+  font-weight: 900;
+  text-shadow: 0px -2px #2980B9;
 }
 
 div.basket {
@@ -232,13 +234,9 @@ div.hover-btn {
   margin: 0px 10px 10px 0px;
   float: left;
   border-radius: 10px;
-  font-family: 'Pacifico', cursive;
+  font-family: Tahoma;
   font-size: 25px;
   color: #FFF;
-  text-decoration: none;  
-  background-color: #3498DB;
-  border-bottom: 5px solid #2980B9;
-  text-shadow: 0px -2px #2980B9;
 }
 
 .recipe-table {
@@ -396,4 +394,8 @@ input.error {
     padding-right: 30px;
     padding-bottom: 50px;
     padding-left: 80px;
+}
+
+.added {
+  color: #3498DB;
 }
